<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_vert_max"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity">



    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="92dp"
        android:layout_height="83dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        app:srcCompat="@mipmap/ic_launcher_green_no_back_big" />

    <TextView
        android:id="@+id/app_name_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:layout_toEndOf="@+id/app_logo"
        android:fontFamily="@font/trajan"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/AppName"
        android:textSize="40sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_gluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/app_logo"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/bez_glutenu"
        android:textColor="@color/GreyVeryDark"
        android:textSize="23dp"
        android:textStyle="bold"
        android:fontFamily="@font/my_font"/>

    <CheckBox
        android:id="@+id/cb_lactose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cb_gluten"
        android:layout_below="@+id/cb_gluten"
        android:layout_marginBottom="5dp"
        android:textColor="@color/GreyVeryDark"
        android:textSize="23dp"
        android:textColorHighlight="@color/colorAccent"
        android:text="@string/bez_laktozy"
        android:textStyle="bold"
        android:fontFamily="@font/my_font"/>

    <CheckBox
        android:id="@+id/cb_vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cb_lactose"
        android:layout_marginBottom="5dp"
        android:textSize="23dp"
        android:textColor="@color/GreyVeryDark"
        android:layout_below="@+id/cb_lactose"
        android:text="@string/weganskie"
        android:textStyle="bold"
        android:fontFamily="@font/my_font"/>

    <Button
        android:id="@+id/button_exclude"
        android:onClick="onExclude"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/cb_vegan"
        android:layout_below="@+id/cb_vegan"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:drawableLeft="@mipmap/ic_funnel"
        android:drawablePadding="8dp"
        android:background="@drawable/exclude_button"
        android:textAlignment="viewStart"
        android:textSize="23sp"
        android:textColor="@color/colorWhite"
        android:text="@string/wyklucz"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="@font/my_font"/>


    <Button
        android:id="@+id/button_search"
        android:onClick="onSearch"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/button_exclude"
        android:layout_alignStart="@+id/button_exclude"
        android:drawableLeft="@mipmap/ic_search_icon_2"
        android:drawablePadding="8dp"
        android:background="@drawable/search_button"
        android:text="@string/szukaj"
        android:textAlignment="viewStart"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/GreyVeryDark"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="@font/my_font"/>


    <Button
        android:id="@+id/button_favorite"
        android:onClick="onGetFavorites"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/button_search"
        android:layout_alignLeft="@+id/button_search"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@mipmap/ic_fav_black"
        android:drawablePadding="8dp"
        android:background="@drawable/exclude_button"
        android:textSize="23sp"
        android:textAlignment="viewStart"
        android:text = "@string/ulubione"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:fontFamily="@font/my_font"/>


</RelativeLayout>